# min-ace

./: Cargo.toml  Cargo.toml.local  Dioxus.toml  ace.rs  input.css
public/: tailwind.css
src/: editor.rs  error.rs  main.rs
